--- a/html/templates/api.html
+++ b/html/templates/api.html
@@ -534,6 +534,7 @@
                         <li>Minion lethality - <span class="monospace">minion lethality: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Weapon reach - <span class="monospace">reach: &lt;number of ft of increased reach&gt; &lt;applicable roll type&gt;</span></li>
                         <li>Chance to be unblockable - <span class="monospace">unblockable chance: &lt;percentage chance&gt; &lt;applicable roll type&gt;</span></li>
+                        <li>Inflict vulnerability - <span class="monospace">vulnerability: &lt;percentage&gt; &lt;applicable roll type&gt;</span></li>
                     </ul>
                     <br>
                     <ul>
